--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
 
             <div class="row">
                <div class="col-md-12 site-animate fadeInUp site-animated">
-                  <h2 style="font-weight:bold;font-family: 'Raleway', sans-serif;border-bottom: 10px solid #f9ae34;padding-bottom: 10px;max-width: 300px;" class="site-primary-title display-4 pt-4">Food Menu</h2>
+                  <h2 style="font-weight:bold;font-family: 'Raleway', sans-serif;border-bottom: 10px solid #f9ae34;padding-bottom: 10px;max-width: 300px;" class="site-primary-title display-4 pt-4 site-animate">Food Menu</h2>
                   <div class="row">
                      <div>
-                        <p class="lead mt-2" style="padding: 0px 20px;font-size: 14px;">If you suffer from allergies regarding: celery, gluten, crustaceans, eggs, fish, lupin, milk, molluscs, mustard, nuts, peanuts, sesame seeds, soya or sulphur dioxide or more, please advise us before placing your order.</p>
+                        <p class="lead mt-2 site-animate" style="padding: 0px 20px;font-size: 14px;">If you suffer from allergies regarding: celery, gluten, crustaceans, eggs, fish, lupin, milk, molluscs, mustard, nuts, peanuts, sesame seeds, soya or sulphur dioxide or more, please advise us before placing your order.</p>
                      </div>
                   </div>
             </div>
           </div>  
-          <h4 style="text-align: center;">Filter the menu below</h4>
+          <h4 style="text-align: center;" class="site-animate">Filter the menu below</h4>
                     <div class="row mb-5">
 
-                   <div class="menu-filter-div">
+                   <div class="site-animate menu-filter-div">
                       <a class="menu-filter" rel="miscellaneous">Miscellaneous</a>
                       <a class="menu-filter" rel="desserts">Desserts</a>
                       <a class="menu-filter" rel="chow-mein">Chow Mein</a>
