--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                </div>
 
 
-               <div style="display: block;" id="set-dinners" class="col-lg-12 col-md-12 col-sm-12">
+               <div  id="set-dinners" class="col-lg-12 col-md-12 col-sm-12">
                   <div class="media d-block mb-4 text-center site-media fadeInUp site-animated">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Set Dinners</p>
@@ -480,7 +480,7 @@
                      </div>
                   </div>
                </div>
-               <div id="appetisers" class="col-lg-12 col-md-12 col-sm-12">
+               <div style="display: block;" id="appetisers" class="col-lg-12 col-md-12 col-sm-12">
                   <div class="media d-block mb-4 text-center site-media fadeInUp site-animated">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Appetisers</p>
