--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   </div>
                </div>
             </div>
-            <h4 style="text-align: center;" class="site-animate">Filter the menu below</h4>
+            <h4 style="text-align: center;" class="site-animate">Filter our menu below</h4>
             <div class="row mb-5">
                <div class="site-animate menu-filter-div"> <a class="menu-filter" rel="appetisers">Appetisers</a> <a class="menu-filter" rel="beef">Beef</a> <a class="menu-filter" rel="chicken">Chicken</a> <a class="menu-filter" rel="chop-suey">Chop Suey</a> <a class="menu-filter" rel="chow-mein">Chow Mein</a> <a class="menu-filter" rel="curry">Curry</a> <a class="menu-filter" rel="desserts">Desserts</a> <a class="menu-filter" rel="drinks">Drinks</a> <a class="menu-filter" rel="duck">Duck</a> <a class="menu-filter" rel="egg-foo-young">Egg Foo Young / Omelette</a> <a class="menu-filter" rel="miscellaneous">Miscellaneous</a> <a class="menu-filter" rel="rice">Rice</a> <a class="menu-filter" rel="rice-noodles">Rice Noodles (Vermicelli)</a> <a class="menu-filter" rel="roast-pork">Roast Pork</a> <a class="menu-filter" rel="satay">Satay</a> <a class="menu-filter" rel="seafood-prawn">Seafood (Prawn)</a> <a class="menu-filter" rel="seafood-shrimp">Seafood (Shrimp)</a> <a class="menu-filter" rel="set-dinners">Set Dinners</a> <a class="menu-filter" rel="soups">Soups</a> <a class="menu-filter" rel="spare-ribs">Spare Ribs</a> <a class="menu-filter" rel="sweet-and-sour">Sweet & Sour</a> <a class="menu-filter" rel="tofu">Tofu</a> <a class="menu-filter" rel="vegetables">Vegetables</a> </div>
             </div>
