--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                            <div class="middle"></div>
                            <div>£10.00</div>
                         </div>
-                        <div class="ingredients">• Barbecued Spare Ribs <br>• Chicken Satay on Skewer <br>• Sesame Seeds Prawn on Toast <br>• Seaweed and Vegetable Spring Roll</div>
+                        <div class="ingredients">• Barbecued Spare Ribs <br>• Chicken Satay on Skewer <br>• Sesame Seeds Prawn on Toast <br>• Crispy Seaweed<br>• Vegetable Spring Roll</div>
                         <div class="linewrapper">
                            <div>Chicken Cutlet <span class="red">(Coated in Breadcrumbs)</span></div>
                            <div class="middle"></div>
