--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                   </div>
                </div>
                <div id="set-dinners" class="col-lg-12 col-md-12 col-sm-12">
-                  <div class="media d-block mb-4 text-center site-media fadeInUp site-animated">
+                  <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Set Dinners</p>
                         <div class="linewrapper">
@@ -436,7 +436,7 @@
                   </div>
                </div>
                <div style="display: block;" id="appetisers" class="col-lg-12 col-md-12 col-sm-12">
-                  <div class="media d-block mb-4 text-center site-media fadeInUp site-animated">
+                  <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Appetisers</p>
                         <div class="linewrapper">
@@ -574,7 +574,7 @@
                   </div>
                </div>
                <div id="soups" class="col-lg-12 col-md-12 col-sm-12">
-                  <div class="media d-block mb-4 text-center site-media fadeInUp site-animated">
+                  <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Soups</p>
                         <div class="linewrapper">
