--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                         </div>
                         <div class="ingredients"></div>
                         <div class="linewrapper">
-                           <div>Crab Meal and Sweetcorn Soup <span class="red"></span></div>
+                           <div>Crab Meat and Sweetcorn Soup <span class="red"></span></div>
                            <div class="middle"></div>
                            <div>£3.20</div>
                         </div>
