--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
             </div>
             <h4 style="text-align: center;" class="site-animate">Filter our menu below</h4>
             <div class="row mb-5">
-               <div class="site-animate menu-filter-div"> <a class="menu-filter" rel="appetisers">Appetisers</a> <a class="menu-filter" rel="beef">Beef</a> <a class="menu-filter" rel="chicken">Chicken</a> <a class="menu-filter" rel="chop-suey">Chop Suey</a> <a class="menu-filter" rel="chow-mein">Chow Mein</a> <a class="menu-filter" rel="curry">Curry</a> <a class="menu-filter" rel="desserts">Desserts</a> <a class="menu-filter" rel="drinks">Drinks</a> <a class="menu-filter" rel="duck">Duck</a> <a class="menu-filter" rel="egg-foo-young">Egg Foo Young / Omelette</a> <a class="menu-filter" rel="miscellaneous">Miscellaneous</a> <a class="menu-filter" rel="rice">Rice</a> <a class="menu-filter" rel="rice-noodles">Rice Noodles (Vermicelli)</a> <a class="menu-filter" rel="roast-pork">Roast Pork</a> <a class="menu-filter" rel="satay">Satay</a> <a class="menu-filter" rel="seafood-prawn">Seafood (Prawn)</a> <a class="menu-filter" rel="seafood-shrimp">Seafood (Shrimp)</a> <a class="menu-filter" rel="set-dinners">Set Dinners</a> <a class="menu-filter" rel="soups">Soups</a> <a class="menu-filter" rel="spare-ribs">Spare Ribs</a> <a class="menu-filter" rel="sweet-and-sour">Sweet & Sour</a> <a class="menu-filter" rel="tofu">Tofu</a> <a class="menu-filter" rel="vegetables">Vegetables</a> </div>
+               <div class="site-animate menu-filter-div"> <a class="menu-filter" id="all" rel="all">All</a> <a class="menu-filter" rel="appetisers">Appetisers</a> <a class="menu-filter" rel="beef">Beef</a> <a class="menu-filter" rel="chicken">Chicken</a> <a class="menu-filter" rel="chop-suey">Chop Suey</a> <a class="menu-filter" rel="chow-mein">Chow Mein</a> <a class="menu-filter" rel="curry">Curry</a> <a class="menu-filter" rel="desserts">Desserts</a> <a class="menu-filter" rel="drinks">Drinks</a> <a class="menu-filter" rel="duck">Duck</a> <a class="menu-filter" rel="egg-foo-young">Egg Foo Young / Omelette</a> <a class="menu-filter" rel="miscellaneous">Miscellaneous</a> <a class="menu-filter" rel="rice">Rice</a> <a class="menu-filter" rel="rice-noodles">Rice Noodles (Vermicelli)</a> <a class="menu-filter" rel="roast-pork">Roast Pork</a> <a class="menu-filter" rel="satay">Satay</a> <a class="menu-filter" rel="seafood-prawn">Seafood (Prawn)</a> <a class="menu-filter" rel="seafood-shrimp">Seafood (Shrimp)</a> <a class="menu-filter" rel="set-dinners">Set Dinners</a> <a class="menu-filter" rel="soups">Soups</a> <a class="menu-filter" rel="spare-ribs">Spare Ribs</a> <a class="menu-filter" rel="sweet-and-sour">Sweet & Sour</a> <a class="menu-filter" rel="tofu">Tofu</a> <a class="menu-filter" rel="vegetables">Vegetables</a> </div>
             </div>
             <div class="row">
-               <div id="desserts" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="desserts" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Desserts</p>
@@ -113,7 +113,7 @@
                      </div>
                   </div>
                </div>
-               <div id="drinks" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="drinks" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Drinks</p>
@@ -132,7 +132,7 @@
                      </div>
                   </div>
                </div>
-               <div id="rice-noodles" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="rice-noodles" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Rice Noodles (Vermicelli)</p>
@@ -169,7 +169,7 @@
                      </div>
                   </div>
                </div>
-               <div id="chow-mein" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="chow-mein" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Chow Mein</p>
@@ -242,7 +242,7 @@
                      </div>
                   </div>
                </div>
-               <div id="miscellaneous" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="miscellaneous" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Miscellaneous</p>
@@ -303,7 +303,7 @@
                      </div>
                   </div>
                </div>
-               <div id="rice" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="rice" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Rice</p>
@@ -382,7 +382,7 @@
                      </div>
                   </div>
                </div>
-               <div id="set-dinners" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="set-dinners" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Set Dinners</p>
@@ -445,7 +445,7 @@
                      </div>
                   </div>
                </div>
-               <div style="display: block;" id="appetisers" class="col-lg-12 col-md-12 col-sm-12">
+               <div style="display: block;" id="appetisers" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Appetisers</p>
@@ -583,7 +583,7 @@
                      </div>
                   </div>
                </div>
-               <div id="soups" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="soups" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Soups</p>
@@ -620,7 +620,7 @@
                      </div>
                   </div>
                </div>
-               <div id="beef" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="beef" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Beef</p>
@@ -687,7 +687,7 @@
                      </div>
                   </div>
                </div>
-               <div id="chicken" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="chicken" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Chicken</p>
@@ -790,7 +790,7 @@
                      </div>
                   </div>
                </div>
-               <div id="duck" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="duck" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Duck</p>
@@ -881,7 +881,7 @@
                      </div>
                   </div>
                </div>
-               <div id="roast-pork" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="roast-pork" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Roast Pork</p>
@@ -917,7 +917,7 @@
                      </div>
                   </div>
                </div>
-               <div id="spare-ribs" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="spare-ribs" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Spare Ribs</p>
@@ -960,7 +960,7 @@
                      </div>
                   </div>
                </div>
-               <div id="seafood-prawn" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="seafood-prawn" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Seafood (Prawn)</p>
@@ -1051,7 +1051,7 @@
                      </div>
                   </div>
                </div>
-               <div id="seafood-shrimp" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="seafood-shrimp" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Seafood (Shrimp)</p>
@@ -1070,7 +1070,7 @@
                      </div>
                   </div>
                </div>
-               <div id="chop-suey" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="chop-suey" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Chop Suey</p>
@@ -1113,7 +1113,7 @@
                      </div>
                   </div>
                </div>
-               <div id="curry" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="curry" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Curry</p>
@@ -1162,7 +1162,7 @@
                      </div>
                   </div>
                </div>
-               <div id="egg-foo-young" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="egg-foo-young" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Egg Foo Young / Omelette</p>
@@ -1205,7 +1205,7 @@
                      </div>
                   </div>
                </div>
-               <div id="satay" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="satay" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Satay <span class="red">All Satay Sauce Contains Peanuts</span></p>
@@ -1236,7 +1236,7 @@
                      </div>
                   </div>
                </div>
-               <div id="sweet-and-sour" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="sweet-and-sour" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Sweet & Sour</p>
@@ -1315,7 +1315,7 @@
                      </div>
                   </div>
                </div>
-               <div id="tofu" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="tofu" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Tofu (Bean Curd)</p>
@@ -1346,7 +1346,7 @@
                      </div>
                   </div>
                </div>
-               <div id="vegetables" class="col-lg-12 col-md-12 col-sm-12">
+               <div id="vegetables" class="col-lg-12 col-md-12 col-sm-12 menu-items">
                   <div class="media d-block mb-4 text-center site-media">
                      <div class="media-body p-md-3 p-3">
                         <p class="menu-cat">Vegetables</p>
